# rust-mcts-connect-four

./: .gitignore  Cargo.toml  bundle.css  bundle.css.map  bundle.js  bundle.js.map  bundle_bg.wasm  index.html  mcts.js  mcts.js.map  mcts_bg.wasm  package-lock.json  package.json  rollup.config.js
src/: board.rs  cli.rs  common.rs  game.rs  hbot.rs  main.rs  mcts.rs
src/game/: board.rs  mod.rs
src/game/board/: mod.rs
web/: App.svelte  Board.svelte  Game.svelte
web/main/: App.svelte  Board.svelte  Game.svelte  game.js
web/worker/: index.js
