[package]
name = "connect-4"
version = "0.1.0"
authors = ["Steve Lam <sla336@sfu.ca>"]

[[bin]]
name = "connect-4"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libc4"
path = "src/main.rs"

[dependencies]
itertools = "0.8.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.7.0"
termion = "1.5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.48", features = ["serde-serialize"]}
